@@ -1,5 +1,5 @@
 <?php
-// $Id: display-render.inc,v 1.5.2.28 2010/07/21 21:03:47 merlinofchaos Exp $
+// $Id: display-render.inc,v 1.5.2.29 2010/07/26 21:24:22 merlinofchaos Exp $
 
 /**
  * @file
@@ -65,7 +65,7 @@ function panels_render_pane($content, $pane, &$display) {
       $style = panels_get_style($pane->style['style']);
 
       if (isset($style) && isset($style['render pane'])) {
-        $output = theme($style['render pane'], $content, $pane, $display);
+        $output = theme($style['render pane'], $content, $pane, $display, $style);
 
         // This could be null if no theme function existed.
         if (isset($output)) {
